website/src/styles/main.scss
@import "bootstrap";

.clickable {
  cursor: pointer
}

.disabled-date {
  color: $gray-lighter;
}

.ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.selected-item {
  background-color: #ddd;
}

